--- a/week-2/hartung-palindrome.html
+++ b/week-2/hartung-palindrome.html
@@ -11,6 +11,8 @@
 ; URL: https://www.w3schools.com/jsref/jsref_length_string.asp
 ; Code Attribution: JavaScript if else and else if
 ; URL: https://www.w3schools.com/js/js_if_else.asp
+; Code Attribution: JavaScript String toLowerCase()
+; URL: https://www.w3schools.com/jsref/jsref_tolowercase.asp
 ; Code Attribution: Three Ways to Reverse a String in JavaScript
 ; URL: https://www.freecodecamp.org/news/how-to-reverse-a-string-in-javascript-in-3-different-ways-75e4763c68cb/
 ; Code Attribution: Additional code from the Assignment 2 - Palindrome App document
@@ -105,7 +107,7 @@
                 let header = "Date: " + today + "<br />Original Phrase: " + txtPhrase + "<br />Reversed Phrase: " + reversedPhrase + "<br />Phrase Length: " + len; // creates the results-header string
                 console.log(header); // Used for testing
                 document.getElementById("assign-results-header").innerHTML = header; // displays the header string in the assign-results-header div
-                let palindromeResults = isPalindrome(txtPhrase); // runs the txtPhrase string through the palindromeResults function
+                let palindromeResults = isPalindrome(txtPhrase.toLowerCase()); // runs the txtPhrase string through the palindromeResults function
                 console.log(palindromeResults); // Used for testing
 
                 // Assigns the appropriate palindrome results to the assign-results div
