--- a/week-2/hartung-palindrome.html
+++ b/week-2/hartung-palindrome.html
@@ -66,6 +66,9 @@
             </div>
         </div>
         <script>
+            //This sets the selected theme
+            setSelectedTheme();
+
             // This function returns the current date
             function getTodaysDate() {
                 return new Date().toLocaleDateString("en-US");
