--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="week-2/hartung-palindrome.html">Assignment 2.2</a></li>
                 <li><a href="week-3/restaurant.html">Assignment 3.2</a></li>
                 <li><a href="week-4/hartung-calorie.html">Assignment 4.2</a></li>
-                <li><a href="#">Assignment 5.2</a></li>
+                <li><a href="week-5/hartung-bobs-auto-repair.html">Assignment 5.2</a></li>
                 <li><a href="#">Assignment 6.2</a></li>
                 <li><a href="#">Assignment 7.2</a></li>
                 <li><a href="#">Assignment 8.2</a></li>
