--- a/week-5/hartung-bobs-auto-repair.html
+++ b/week-5/hartung-bobs-auto-repair.html
@@ -104,12 +104,12 @@
                 let productValue = productList.options[productList.selectedIndex].value;
                 console.log(product); // used for testing purposes
 
-                if (product.value !== "select") {
+                if (productValue !== "select") {
                     shoppingCart.add(new Product(product, productValue));
+                    alert(`${product} was added to your shopping cart!`); // Alerts the user that a product was added to the cart
                 }
                 console.log(shoppingCart);
                 setCartCount(); // calls the setCartCount function
-                alert(`${product} was added to your shopping cart!`); // Alerts the user that a product was added to the cart
             };
 
             // counts the number of items in the shopping cart array
