--- a/week-6/hartung-future-value.html
+++ b/week-6/hartung-future-value.html
@@ -7,12 +7,8 @@
 ; Description: Future Value App
 ; Code Attribution: import
 ; URL: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/import
-; Code Attribution: Window Alert
-; URL: https://www.w3schools.com/jsref/met_win_alert.asp
 ; Code Attribution: Classes
 ; URL: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes
-; Code Attribution: HTML DOM Select Object
-; URL: https://www.w3schools.com/jsref/dom_obj_select.asp
 ; Code Attribution: JavaScript For Of Loop
 ; URL: https://www.w3schools.com/js/js_loop_forof.asp
 ; Code Attribution: Additional code from the Assignment 6 document
@@ -26,61 +22,67 @@
         <meta charset="UTF-8" />
 
         <!-- CSS Links -->
-        <link rel="stylesheet" type="text/css" href="../flex-layout.css" />
-        <link rel="stylesheet" type="text/css" href="hartung-future-value.css" />
         <link rel="stylesheet" type="text/css" href="../theme.css" />
         <link rel="stylesheet" type="text/css" href="../site.css" />
+        <link rel="stylesheet" type="text/css" href="hartung-future-value.css" />
+        <link rel="stylesheet" type="text/css" href="../flex-layout.css" />
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
         <!-- Script Links -->
-
+        <script src="../theme.js"></script>
         <!-- Site Title -->
         <title>WEB 330 - Enterprise JavaScript II</title>
     </head>
     <body class="light-theme">
         <!-- sets theme to light-theme -->
-        <div id="container">
-            <div class="assign-container">
-                <h1 class="app-header">Welcome to the Future Value App!</h1>
-                <div class="assign-content">
-                    <div class="card">
-                        <div class="card-title">Future Value Calculator</div>
-                        <div class="row danger col-12" id="errorLog">Test</div>
-                        <form class="col-12">
-                            <label class="form-field form-label col-5" for="txtMonthlyPayment">Monthly Payment</label>
-                            <input class="form-field col-7" id="txtMonthlyPayment" />
-                            <label class="form-field form-label col-5" for="txtYearlyRate">Interest Rate:</label>
-                            <input class="form-field col-7" id="txtYearlyRate" />
-                            <br />
-                            <i class="danger">Enter 11% as 11.1:</i>
-                            <label class="form-field form-label col-5" for="listNumOfYears">Number of Years</label>
-                            <select class="form-field col-7" id="listNumOfYears">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                            </select>
+        <div class="assign-container">
+            <h1 class="app-header">Welcome to the Future Value App!</h1>
+            <div class="assign-content">
+                <div class="card">
+                    <div class="card-title">Future Value Calculator</div>
+                    <div class="card-content">
+                        <div class="row danger col-12" id="errorLog"></div>
+                        <div class="form">
+                            <div class="form-label row">
+                                <label class="col-5" for="txtMonthlyPayment">Monthly Payment:</label>
+                                <input type="text" class="col-7 input" id="txtMonthlyPayment" />
+                            </div>
+                            <div class="form-label row">
+                                <label class="col-5" for="txtYearlyRate">Interest Rate:</label>
+                                <input type="text" class="col-7 input" id="txtYearlyRate" />
+                            </div>
+                            <span><i class="danger">Enter 11% as 11.1:</i></span>
+                            <div class="form-label row">
+                                <label class="col-5" for="listNumOfYears">Number of Years</label>
+                                <select class="drop-down-menu col-7" id="listNumOfYears">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </div>
                             <!--Add calculate button  -->
                             <button type="submit" class="btn btn-primary full-width" id="btnCalculate">Calculate</button>
-                        </form>
+                            <br />
+                        </div>
                     </div>
-                    <br />
-                    <!-- Link to the home page -->
-                    <a href="../index.html" class="return-home">Return</a>
                 </div>
+                <br />
+                <!-- Link to the home page -->
+                <a href="../index.html" class="return-home">Return</a>
             </div>
         </div>
         <!-- results are posted to this container -->
         <div class="assign-container">
             <div class="assign-content">
                 <div class="card">
-                    <div class="card-title">Calculation as of<span id="today"></span></div>
+                    <div class="card-title">Calculation as of <span id="today"></span></div>
                     <div class="card-content assign-results-text" id="futureValue"></div>
                 </div>
             </div>
@@ -89,6 +91,67 @@
         <script type="module">
             // Module allows for importing information from other script files
             setSelectedTheme(); // sets the selected theme
+
+            import { FinanceCalculator } from "./finance-calculator.js"; // imports the FinanceCalculator class from finance-calculator.js
+            import { Validator } from "./validator.js"; // imports the Validator class from validator.js
+
+            document.getElementById("today").innerHTML = new Date().toLocaleDateString("en-US"); // Adds the current date to the today span
+
+            // initiates a function on click of btnCalculate
+            document.getElementById("btnCalculate").onclick = () => {
+                // assigns variables to values
+                let monthlyPayment = document.getElementById("txtMonthlyPayment").value;
+                let rate = document.getElementById("txtYearlyRate").value;
+                let years = document.getElementById("listNumOfYears").value;
+                let errorLogEl = document.getElementById("errorLog");
+
+                // console.log for testing
+                console.log(monthlyPayment);
+                console.log(rate);
+                console.log(years);
+
+                // creates a new validator object for monthlyPaymentValidator
+                let monthlyPaymentValidator = new Validator("Monthly Payment", monthlyPayment);
+                monthlyPaymentValidator.addRequiredField();
+                monthlyPaymentValidator.addRequiredFloatField();
+                monthlyPaymentValidator.addFloatMinField(100);
+                console.log(monthlyPaymentValidator);
+
+                // creates a new validator object for rateValidator
+                let rateValidator = new Validator("Interest Rate", rate);
+                rateValidator.addRequiredField();
+                rateValidator.addRequiredFloatField();
+                rateValidator.addFloatMaxField(100);
+
+                // assigns an empty array to the errorLog
+                let errorLog = [];
+
+                // validates the user inputted values. If they pass validation, outputs the future value
+                if (!monthlyPaymentValidator.validate()) {
+                    for (let message of monthlyPaymentValidator.messages) {
+                        errorLog.push(message);
+                    }
+                }
+                if (!rateValidator.validate()) {
+                    for (let message of rateValidator.messages) {
+                        errorLog.push(message);
+                    }
+                }
+                if (monthlyPaymentValidator.validate() && rateValidator.validate()) {
+                    errorLogEl.innerHTML = "";
+                    let futureValue = FinanceCalculator.calculateFutureValue(monthlyPayment, rate, years);
+                    console.log(futureValue);
+                    document.getElementById("futureValue").innerHTML = "The future value is " + FinanceCalculator.convertToCurrency(futureValue);
+                } else {
+                    errorLogEl.innerHTML = "";
+                    let errorLogMessage = `<ul>`;
+                    for (let message of errorLog) {
+                        errorLogMessage += `<li>${message}</li>`;
+                    }
+                    document.getElementById("errorLog").innerHTML = errorLogMessage + `</ul>`;
+                }
+                console.log(errorLog); // console.log the errorLog for testing
+            };
         </script>
     </body>
 </html>
