--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="week-4/hartung-calorie.html">Assignment 4.2</a></li>
                 <li><a href="week-5/hartung-bobs-auto-repair.html">Assignment 5.2</a></li>
                 <li><a href="week-6/hartung-future-value.html">Assignment 6.2</a></li>
-                <li><a href="#">Assignment 7.2</a></li>
+                <li><a href="week-7/hartung-whatabook1.html">Assignment 7.2</a></li>
                 <li><a href="#">Assignment 8.2</a></li>
             </ul>
             <h3>Projects</h3>
