Personal Portfolio Update

--- a/hartung-personal-portfolio/index.html
+++ b/hartung-personal-portfolio/index.html
@@ -20,7 +20,9 @@
             <div class="assign-content">
                 <div class="card">
                     <div class="card-title">Joel's Bucket list</div>
-
+                     <div class="card-content">
+                        <img class="medium" src="./images/oktoberfest.jpg" alt="oktoberfest">
+                    </div>
                     <div class="card-content">
                         <ul id="bucket-list">
                             <li><input type="checkbox" class="strikethrough"><span>Write a horror novel</span></input></li>
@@ -33,11 +35,11 @@
                             <li><input type="checkbox" class="strikethrough"><span>Get a platinum trophy in any video game</span></input></li>
                             <li><input type="checkbox" class="strikethrough" checked><span>Get a PS5</span></input></li>
                         </ul>
-                    </div>
+                    </div>                   
                 </div>
             </div>
+            <br />
         </div>
-
         <footer-component></footer-component>
     </body>
 </html>
