--- a/hartung-personal-portfolio/about.html
+++ b/hartung-personal-portfolio/about.html
@@ -24,7 +24,7 @@
                     <div class="card-content">
                         <p>
                             Thirty-something Librarian. Husband. Father. Current Nebraska resident. Nature lover. Occasional video gamer. I used read books. I used to have hobbies. There used to be more time. <br /><br />
-                            I still really like to cook.
+                            I really like to cook.
                         </p>
                         <img class="medium" src="./images/oktoberfest.jpg" alt="oktoberfest" />
                         <img class="medium" src="./images/scotland.jpg" alt="scotland" />
