--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
             <h3>Projects</h3>
             <ul>
-                <li><a href="#">Personal Portfolio</a></li>
+                <li><a href="./hartung-personal-portfolio/index.html">Personal Portfolio</a></li>
                 <li><a href="https://jhartung.github.io/web-231/" target="_blank">WEB 231's Landing Page</a></li>
             </ul>
             <h4>Important Links</h4>
