--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <li><a href="week-5/hartung-bobs-auto-repair.html">Assignment 5.2</a></li>
                 <li><a href="week-6/hartung-future-value.html">Assignment 6.2</a></li>
                 <li><a href="week-7/hartung-whatabook1.html">Assignment 7.2</a></li>
-                <li><a href="#">Assignment 8.2</a></li>
+                <li><a href="week-8/hartung-whatabook2.html">Assignment 8.2</a></li>
             </ul>
             <h3>Projects</h3>
             <ul>
-                <li><a href="./hartung-personal-portfolio/index.html">Personal Portfolio</a></li>
+                <li><a href="https://jhartung.github.io/portfolio/" target="_blank">Personal Portfolio</a></li>
                 <li><a href="https://jhartung.github.io/web-231/" target="_blank">WEB 231's Landing Page</a></li>
             </ul>
             <h4>Important Links</h4>
